frontend/test/should_pass/defYield_001.grg
rule t
{
	pp:p(--- yield x);
---
	def x:Node;

	modify {
		x --> y;
		pp(--- yield y);
	---
		def y:Node;
	}
}

pattern p(--- def x:Node) modify(--- def z:Node)
{
	y:Node;
---
	yield { yield x = y; }
	
	modify {
		u:Node;
	---
		eval { yield z = u; }
	}
}

