frontend/test/should_fail/iterated_002.grg
rule r
{
	x:Node -e:Edge-> x;
	iterated {
		x -e-> x;
		
		modify {
			z:Node;
		}
	}
	
	modify {
	}
}